(wip) Started removing the combat joined / left events
